--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
     margin-bottom: 30px;
   }
   
-  .glosario-header h1 {
+ h1 {
 font-size: 4rem;
 color: #630b6e;
   font-family: "DynaPuff", system-ui;
