--- a/styles.css
+++ b/styles.css
@@ -21,14 +21,12 @@ body {
   
  h1 {
 font-size: 4rem;
-color: #630b6e;
+color:#630b6e;
   font-family: "DynaPuff", system-ui;
   font-optical-sizing: auto;
-  font-weight: <weight>;
+  font-weight<weight>;
   font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
-}
+      font-variation-settings}
 
   .glosario-header p {
     font-family: "Atma", system-ui;
